--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,139 @@
 .App {
-  text-align: center;
+  display      : flex;
+  justify-items: center;
+  position     : relative;
+  font-family  : sans-serif;
+  min-width: 240px;
+}
+
+.header {
+  font-size  : 150%;
+  font-weight: 500;
+  text-align : center;
+  text-shadow: 0 0 1px rgb(28, 28, 56);
+}
+
+.balance-div {
+  border-radius   : 6px;
+  padding         : 1% 5%;
+  text-align      : left;
+  background-color: rgb(28, 28, 56);
+}
+
+.balance-div h2 {
+  font-weight: 200;
+  color      : aliceblue;
 }
 
 .income-expense {
-  display: flex;
+  display        : flex;
   justify-content: space-evenly;
+  text-align     : center;
+  color          : rgb(28, 28, 56);
 }
 
-.history {
-  display: flex;
-  justify-content: space-between;
-  background-color: bisque;
-  margin: 1%;
+.income {
+  /* color: green; */
+  /* border-right : 3px solid rgb(28, 28, 56); */
+  border-radius: 5px;
+  flex         : 1;
+  font-size    : 120%;
+  border-bottom: 3px solid #70ee70;
+  background   : #ffffff;
+  /* fallback for old browsers */
+  background   : -webkit-linear-gradient(to top, #70ee70, #ffffff);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background   : linear-gradient(to top, #80f380, #ffffff);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.expense {
+  border-radius: 5px;
+  flex         : 1;
+  font-size    : 120%;
+  border-bottom: 3px solid #db5f5d;
+  background   : #F11712;
+  /* fallback for old browsers */
+  background   : -webkit-linear-gradient(to top, #e95452, #ffffff);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background   : linear-gradient(to top, #db5f5d, #ffffff);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.history-ul {
+  margin       : 2% 0%;
+  padding      : 0;
+  list-style   : none;
+  max-height   : 400px;
+  /* border    : 1px solid purple; */
+}
+
+.history-li {
+  margin          : 0.8%;
+  padding         : 1%;
+  position        : relative;
+  display         : flex;
+  justify-content : space-around;
+  list-style      : none;
+  text-align      : left;
+  box-shadow      : 0 0 3px rgb(28, 28, 56);
+  border-radius   : 5px;
+  background-color: rgb(28, 28, 56);
+}
+
+.history-li span {
+  flex       : 1;
+  text-shadow: 0 0 1px aliceblue;
+  color      : white;
+}
+
+.delete-icon-button {
+  position        : absolute;
+  right           : 0;
+  top             : 0;
+  bottom          : 0;
+  background-color: transparent;
+}
+
+.delete-icon {
+  color: aliceblue;
+}
+
+.form {
+  display  : flex;
+  flex-flow: column;
+  color    : rgb(28, 28, 56);
+}
+
+.form-heading {
+  text-align: center;
+}
+
+.input-div {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.label {
+  color: rgb(28, 28, 56);
+}
+
+.input {
+  flex     : 1;
+  min-width: 50%;
+  font-size-adjust: initial;
+}
+
+.toggle-btn {
+  flex           : 1;
+  justify-content: center;
+}
+
+#submit {
+  flex            : 1;
+  margin          : 5%;
+  background-color: rgb(28, 28, 56);
+  font-weight: bolder;
 }
