--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   justify-items: center;
   position     : relative;
   font-family  : sans-serif;
-  min-width: 240px;
+  min-width    : 240px;
+  height       : 100%;
 }
 
 .header {
@@ -11,6 +12,7 @@
   font-weight: 500;
   text-align : center;
   text-shadow: 0 0 1px rgb(28, 28, 56);
+  margin-top : 5%;
 }
 
 .balance-div {
@@ -63,30 +65,39 @@
 }
 
 .history-ul {
-  margin       : 2% 0%;
-  padding      : 0;
-  list-style   : none;
-  max-height   : 400px;
-  /* border    : 1px solid purple; */
+  margin    : 2% 0%;
+  padding   : 0;
+  list-style: none;
 }
 
-.history-li {
-  margin          : 0.8%;
-  padding         : 1%;
-  position        : relative;
-  display         : flex;
-  justify-content : space-around;
-  list-style      : none;
-  text-align      : left;
-  box-shadow      : 0 0 3px rgb(28, 28, 56);
-  border-radius   : 5px;
-  background-color: rgb(28, 28, 56);
+.history-li-green,
+.history-li-red {
+  text-shadow    : 0 0 1px rgb(28, 28, 56);
+  color          : rgb(28, 28, 56);
+  margin         : 0.8%;
+  padding        : 1.5%;
+  position       : relative;
+  display        : flex;
+  justify-content: space-around;
+  list-style     : none;
+  text-align     : left;
+  color          : rgb(28, 28, 56);
+  border-radius  : 5px;
 }
 
-.history-li span {
-  flex       : 1;
-  text-shadow: 0 0 1px aliceblue;
-  color      : white;
+.history-li-green {
+  background: rgb(220, 255, 203);
+  background: linear-gradient(90deg, rgba(220, 255, 203, 1) 8%, rgba(75, 162, 42, 1) 62%, rgba(19, 70, 0, 1) 100%);
+}
+
+.history-li-red {
+  background: rgb(255, 203, 203);
+  background: linear-gradient(90deg, rgba(255, 203, 203, 1) 8%, rgba(162, 42, 42, 1) 62%, rgba(70, 1, 0, 1) 100%);
+}
+
+.history-li-green span,
+.history-li-red span {
+  flex: 1;
 }
 
 .delete-icon-button {
@@ -94,11 +105,12 @@
   right           : 0;
   top             : 0;
   bottom          : 0;
+  border-color    : transparent;
   background-color: transparent;
 }
 
 .delete-icon {
-  color: aliceblue;
+  color: gold;
 }
 
 .form {
@@ -116,14 +128,20 @@
   text-align: center;
 }
 
+
 .label {
-  color: rgb(28, 28, 56);
+  color    : rgb(28, 28, 56);
+  font-size: 5vw;
 }
 
 .input {
   flex     : 1;
   min-width: 50%;
-  font-size-adjust: initial;
+}
+
+input[type="text"],
+input[type="number"] {
+  font-size: 2.5vw;
 }
 
 .toggle-btn {
@@ -133,7 +151,8 @@
 
 #submit {
   flex            : 1;
-  margin          : 5%;
+  margin          : 5% 5% 20% 5%;
   background-color: rgb(28, 28, 56);
-  font-weight: bolder;
+  font-weight     : bolder;
+  color           : white;
 }
