--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,6 @@
   justify-items: center;
   position     : relative;
   font-family  : sans-serif;
-  min-width    : 240px;
-  height       : 100%;
 }
 
 .header {
@@ -18,7 +16,7 @@
 .balance-div {
   border-radius   : 6px;
   padding         : 1% 5%;
-  text-align      : left;
+  text-align      : center;
   background-color: rgb(28, 28, 56);
 }
 
@@ -29,9 +27,10 @@
 
 .income-expense {
   display        : flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   text-align     : center;
   color          : rgb(28, 28, 56);
+  margin: 2px;
 }
 
 .income {
@@ -47,7 +46,7 @@
   /* Chrome 10-25, Safari 5.1-6 */
   background   : linear-gradient(to top, #80f380, #ffffff);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  margin: 2px;
 }
 
 .expense {
@@ -61,7 +60,7 @@
   /* Chrome 10-25, Safari 5.1-6 */
   background   : linear-gradient(to top, #db5f5d, #ffffff);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  margin: 2px;
 }
 
 .history-ul {
@@ -124,7 +123,7 @@
 }
 
 .input-div {
-  margin-top: 20px;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -136,7 +135,7 @@
 
 .input {
   flex     : 1;
-  min-width: 50%;
+  min-width: 40%;
 }
 
 input[type="text"],
@@ -150,8 +149,7 @@ input[type="number"] {
 }
 
 #submit {
-  flex            : 1;
-  margin          : 5% 5% 20% 5%;
+  margin          : 0% 5% 5% 5%;
   background-color: rgb(28, 28, 56);
   font-weight     : bolder;
   color           : white;
